crates/wire/tests/snapshots/wire_shapes__check_allowed_shape_is_pinned.snap
---
source: crates/wire/tests/wire_shapes.rs
expression: "CheckWire::allowed(&allowed)"
---
{
  "v": 1,
  "allowed": true,
  "warnings": [
    {
      "code": "stage-already-complete",
      "stage": "01-design"
    }
  ]
}
