crates/wire/tests/snapshots/wire_shapes__derived_wire_shape_is_pinned.snap
---
source: crates/wire/tests/wire_shapes.rs
expression: wire
---
{
  "v": 1,
  "run_id": "250718-widget",
  "state": "gated-red",
  "phase": "convergence",
  "parked": [
    "02-tests"
  ],
  "anomalies": [
    {
      "code": "later-output-without-earlier",
      "later": "03-implement",
      "earlier": "02-tests"
    }
  ]
}
